Add button under the Product

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cabin+Condensed:wght@400;500;600;700&family=Calistoga&display=swap" rel="stylesheet">
     
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/gsap.min.js"></script>
+    <script src="https://assets.codepen.io/16327/MorphSVGPlugin3.min.js"></script>
+    <script> gsap.registerPlugin(MorphSVGPlugin); </script>
+
+
     <title>Coffee Shop</title>
     
   </head>
